Bring Bazaar's LightSide & Genesis-Plugins up-to-speed from originating repos